--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -792,7 +792,14 @@
       - 爆破剑:1:1:0.1
       - 闪耀金羽:15:21
       - 铂金币:1
-      - 金币:25
+      - 金币:50
+      - 超级治疗药水:5:15
+  亵渎守卫:
+    1:
+      items:
+      - 亵渎晶核:3
+      - 浊火精华:15:20
+      - 铂金币:2
       - 超级治疗药水:5:15
   亵渎天神，普罗维登斯:
     1:
