--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -746,7 +746,7 @@
     drop:
         - "铜币:120000:130000:1"
         - "断裂英雄剑:1:1"
-        - "克苏鲁之眼:1:1:0.5555"
+        - "克苏鲁之眼悠悠球:1:1:0.5555"
 致命球:
     drop:
         - "铜币:2000:2500:1"
