--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -148,12 +148,14 @@ deathMessages:
   - <victim> 被烧成了焦炭
   - <victim> 被烧得只剩渣了
   - <victim> 成了全熟牛排
-  Debuff_咒火:
+  Debuff_霜火:
   - <victim> 无法把火扑灭
   - <victim> 被烧成了焦炭
   - <victim> 被烧得只剩渣了
   - <victim> 成了全熟牛排
-  Debuff_霜火:
+  Debuff_狱炎:
+  - <victim> 被狱火吞噬了
+  Debuff_咒火:
   - <victim> 无法把火扑灭
   - <victim> 被烧成了焦炭
   - <victim> 被烧得只剩渣了
@@ -169,6 +171,11 @@ deathMessages:
   - <victim> 变成了电池
   - <victim> 的生命力从正变负
   - <victim> 成了避雷针
+  Debuff_深渊水压:
+  - <victim> 被压力碾碎了
+  - <victim> 的肺坍缩成了一团
+  Debuff_血液沸腾:
+  - <victim> 血如泉涌
   Debuff_硫磺火:
   - <victim> 被漆黑的烈焰燃尽
   Debuff_辐射:
@@ -179,10 +186,16 @@ deathMessages:
   Debuff_瘟疫:
   - <victim> 的血肉被瘟疫所融化
   - <victim> 已无药可医
+  Debuff_破晓:
+  - <victim> 被日耀射线焚烧殆尽
   Debuff_神圣之火:
   - <victim> 被自己的罪孽吞噬了
   Debuff_夜魇:
   - <victim> 被月之射线焚烧殆尽
+  Debuff_元素谐鸣:
+  - <victim> 融入了元素交响乐
+  Debuff_硫磺海剧毒:
+  - <victim> 被剧毒废物融化了
   Debuff_弑神怒焰:
   - <victim> 的灵魂消散了
   Debuff_龙焰:
@@ -192,6 +205,8 @@ deathMessages:
   - <victim> 与星流能量共振而塌缩了
   Debuff_孱弱巫咒:
   - <victim> 被硫磺烈焰烧焦了
+  Debuff_解离:
+  - <victim> 的灵魂已支离破碎
   Debuff_血神之凋零:
   - <victim> 成为了血神的祭品
 settings:
