fishing items, bugfix and tweaks

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -20,6 +20,52 @@
     - 箱子:3
     - 新手版挥发明胶
     - 归一心元石
+填充草药鱼:
+  1:
+    giveAllItems: false
+    items:
+    - 闪耀根:1:3
+    - 太阳花:1:3
+    - 死亡草:1:3
+    - 火焰花:1:3
+    - 月光草:1:3
+    - 寒颤棘:1:3
+    - 波浪叶:1:3
+  2:
+    giveAllItems: false
+    items:
+    - 南瓜种子:2:5
+    - 橡实:1:2
+    - 草种:2:5
+    - 腐化种子:2:5
+闪光宝石鱼:
+  1:
+    items:
+    - 钻石:2:4
+日光鱼:
+  1:
+    items:
+    - 日光精华:5:10
+冰川鱼:
+  1:
+    items:
+    - 冰川精华:5:10
+混乱鱼:
+  1:
+    items:
+    - 混乱精华:5:10
+飞翔之鱼:
+  1:
+    items:
+    - 飞翔之魂:2:5
+光明之鱼:
+  1:
+    items:
+    - 光明之魂:2:5
+暗影之鱼:
+  1:
+    items:
+    - 暗影之魂:2:5
 木匣:
   1:
     giveAllItems: false
@@ -67,10 +113,6 @@
     items:
     - 跳跃之瓶:1:1:0.0244
     - 航鱼靴:1:1:0.025
-  8:
-    giveAllItems: true
-    items:
-    - 钻石:1:3:0.5
 铁匣:
   1:
     giveAllItems: false
@@ -111,10 +153,6 @@
     items:
     - 跳跃之瓶:1:1:0.0404
     - 航鱼靴:1:1:0.0426
-  8:
-    giveAllItems: true
-    items:
-    - 钻石:2:6:0.75
 金匣:
   1:
     giveAllItems: false
@@ -151,10 +189,6 @@
     giveAllItems: true
     items:
     - 生命水晶:1:1:0.125
-  8:
-    giveAllItems: true
-    items:
-    - 钻石:5:10
 珍珠木匣:
   1:
     giveAllItems: false
@@ -174,7 +208,7 @@
     items:
     - 铜矿石:4:15
     - 铁矿石:4:15
-    - 钴矿石:4:15
+    - 钴矿:4:15
   3:
     giveAllItems: false
     items:
@@ -204,10 +238,6 @@
     items:
     - 跳跃之瓶:1:1:0.0244
     - 航鱼靴:1:1:0.025
-  8:
-    giveAllItems: true
-    items:
-    - 钻石:1:3:0.5
 秘银匣:
   1:
     giveAllItems: false
@@ -252,10 +282,6 @@
     items:
     - 跳跃之瓶:1:1:0.0404
     - 航鱼靴:1:1:0.0426
-  8:
-    giveAllItems: true
-    items:
-    - 钻石:2:6:0.75
 钛金匣:
   1:
     giveAllItems: false
@@ -296,10 +322,384 @@
     giveAllItems: true
     items:
     - 生命水晶:1:1:0.125
-  8:
-    giveAllItems: true
+天空匣:
+  1:
     items:
-    - 钻石:5:10
+    - 金币:1:5:0.5
+    - 天界磁石
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+绿洲匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+    - 蚁狮上颚:2:5
+    - 风暴之颚:1:3
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+冰冻匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+    - 寒颤棘:2:5
+    - 冰块:5:15
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+海洋匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+    - 剑鱼:1:1:0.2
+    - 掠夺鲨:1:1:0.05
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+丛林匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+    - 丛林孢子:4:7
+    - 毒刺:2:5:0.5
+    - 藤蔓:1:3:0.5
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+腐化匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+    - 星力手环
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+黑曜石匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+    - 狱炎锭:1:3
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+地牢匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+  5:
+    progressRequired: 骷髅王
+    items:
+    - 死灵骨髓杖:1:1:0.05
+    - 手枪:1:1:0.05
+    - 水矢:1:1:0.05
+    - 蓝月:1:1:0.05
+    - 钴盾:1:1:0.05
+    - 海蓝权杖:1:1:0.05
+    - 妖刀村正:1:1:0.05
+神圣匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+    - 水晶蛇:1:1:0.25
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+硫海匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+    - 深渊护身符:1:1:0.25
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+  5:
+    giveAllItems: false
+    progressRequired: 灾厄之眼
+    items:
+    - 深渊细胞:2:5
+    - 流明晶:2:5
+  6:
+    giveAllItems: false
+    progressRequired: 石巨人
+    items:
+    - 熔渣锭:3:5
+    - 熔渣矿:15:20
+  7:
+    progressRequired: 噬魂幽花
+    items:
+    - 猎魂鲨牙:5
+沉沦匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+    - 沉沦渊石:10:30
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+  5:
+    progressRequired: 荒漠灾虫
+    items:
+    - 棱晶碎片:5:10
+    - 海棱晶:2:5:0.2
+  6:
+    progressRequired: 血肉之墙
+    items:
+    - 软体动物外壳:2:5
+    - 波塞冬:1:1:0.05
+    - 音波步枪:1:1:0.05
+    - 海贝法杖:1:1:0.05
+    - 海蚌锤:1:1:0.05
+硫磺火匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+    - 狱炎锭:2:5:0.25
+    - 狱炎矿:5:20
+    - 黑曜石:2:5
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+  5:
+    progressRequired: 硫磺火元素
+    items:
+    - 污痕核心:2:5
+  6:
+    progressRequired: 亵渎天神，普罗维登斯
+    items:
+    - 血石:2:5
+星幻匣:
+  1:
+    items:
+    - 金币:1:5:0.5
+    - 坠落之星:5:10
+    - 星尘:10:20
+    - 陨石锭:1:3
+  2:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.25
+    - 敏捷药水:1:3:0.25
+    - 铁皮药水:1:3:0.25
+    - 再生药水:1:3:0.25
+    - 鱼鳃药水:1:3:0.25
+  3:
+    giveAllItems: false
+    items:
+    - 治疗药水:2:5:0.5
+    - 魔力药水:2:5:0.5
+  4:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:2:5:0.5
+    - 专家鱼饵:2:3:0.33
+    - 大师鱼饵:1:2:0.2
+  5:
+    progressRequired: 白金星舰
+    items:
+    - 星舰电池:2:5
+    - 星爆核心:1:1:0.1
+  6:
+    progressRequired: 星神游龙
+    items:
+    - 炫星锭:1:3:0.5
+    - 炫星矿:10:20
+    - 冥思溶剂:5:10
 血肉晶簇:
   1:
     giveAllItems: false
