--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -111,6 +111,7 @@ deathMessages:
   - <victim> 在死后的世界冲浪
   - <victim> 的运气用光了
   - <victim> 满身疮痍
+  - <victim> 面带安详
   - <victim> 被登dua郎
   - <victim> 心花怒放
   - <victim> 脑洞大开
