--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/buff.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/buff.yml
@@ -395,6 +395,11 @@ effects:
     attributes:
       regen: 4
     tooltip: 生命再生增加
+  血鳍之助:
+    isBuff: true
+    attributes:
+      regen: 10
+    tooltip: 不要让血液冲昏头脑
   召唤:
     isBuff: true
     attributes:
