--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
@@ -3654,6 +3654,19 @@ TNT:
     arrowOrPotion: true
     gravity: 0
     liveTime: 60
+水晶蛇爆炸水晶:
+    gravity: 0
+    liveTime: 60
+    trailColor: 249|126|246
+    clusterBomb:
+        amount: 4
+        damageMulti: 0.8
+        name: 水晶蛇爆炸水晶碎片
+        velocity: 1
+水晶蛇爆炸水晶碎片:
+    gravity: 0
+    liveTime: 20
+    trailColor: 249|126|246
 树叶:
     arrowOrPotion: true
     liveTime: 40
