mount-related sprites and file structure tweak

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -228,8 +228,10 @@ skins.227=227
 skins.228=228
 skins.229=229
 skins.230=230
+skins.231=231
+skins.232=232
 
-name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b
+name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b|\u53f2\u83b1\u59c6\u5750\u9a91
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
 name.3=\u9ed1\u53f2\u83b1\u59c6
 name.4=\u9ec4\u53f2\u83b1\u59c6
@@ -256,7 +258,7 @@ name.24=\u5c0f\u9b3c\u00a71
 name.25=\u5c0f\u9b3c\u00a72
 name.26=\u5c0f\u9b3c\u00a73
 name.27=\u9644\u9b54\u98de\u5200
-name.28=\u53f2\u83b1\u59c6\u7687\u540e
+name.28=regex:\u53f2\u83b1\u59c6\u7687\u540e|\u7fbd\u7ffc\u53f2\u83b1\u59c6\u5750\u9a91
 name.29=\u5f39\u529b\u53f2\u83b1\u59c6
 name.30=\u6c34\u6676\u53f2\u83b1\u59c6
 name.31=\u98de\u7fd4\u53f2\u83b1\u59c6
@@ -290,7 +292,7 @@ name.58=\u6d41\u661f\u706b\u602a
 name.59=\u732a\u9ca8\u6ce1\u6ce1
 name.60=\u6c34\u87ba\u65cb
 name.61=\u9f99\u5377\u9ca8
-name.62=\u732a\u9ca8\u516c\u7235\u00a71
+name.62=regex:\u732a\u9ca8\u516c\u7235\u00a71|\u732a\u9f99\u9c7c\u5750\u9a91
 name.63=\u732a\u9ca8\u516c\u7235\u00a72
 name.64=\u732a\u9ca8\u516c\u7235\u00a73
 name.65=\u661f\u5c18\u7ec6\u80de
@@ -459,3 +461,5 @@ name.227=\u963f\u745e\u65af\u5916\u9aa8\u9abc
 name.228=\u5f52\u865a\u4e4b\u7075
 name.229=\u6e90\u751f\u5bd2\u6676
 name.230=\u5149\u9634\u6d41\u65f6\u4f1e
+name.231=\u72ec\u89d2\u517d\u5750\u9a91
+name.232=\u661f\u6d41\u98de\u6905
