bugfix and tweaks

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -13974,7 +13974,7 @@ Dodu的手炮:
   item: CLAY_BALL
   lore:
   - §r右键木板或树木使用，摧毁它并获得生命再生效果
-  - §r对木板使用时为10秒，对树木使用时为16秒
+  - §r对木板使用时为16秒，对树木使用时为10秒
   - §r可于建材商人处购买更多
   - §r“是的，它严重减缓了我的工作效率”
   worth: 600
@@ -14587,6 +14587,7 @@ Dodu的手炮:
   item: IRON_INGOT
   lore:
   - §r在主手时，右键铁轨将乘坐普通矿车
+  - §rBOSS存活时速度将大大降低
   worth: 100000
   rarity: 1
 机械矿车:
@@ -14594,18 +14595,21 @@ Dodu的手炮:
   lore:
   - §6专家模式物品
   - §r在主手时，右键铁轨将乘坐机械矿车
+  - §rBOSS存活时速度将大大降低
   worth: 3000000
   rarity: 1000
 彩虹猫矿车:
   item: IRON_INGOT
   lore:
   - §r在主手时，右键铁轨将乘坐彩虹猫矿车
+  - §rBOSS存活时速度将大大降低
   worth: 10000000
   rarity: 10
 神明矿车:
   item: IRON_INGOT
   lore:
   - §r在主手时，右键铁轨将乘坐神明矿车
+  - §rBOSS存活时速度将大大降低
   worth: 30000000
   rarity: 14
 黏鞍:
