--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
@@ -2984,6 +2984,11 @@ WORKBENCH:
     requireLevel: 1
     resultItem: 刺身
     requireItem:
+    - 偏口鱼
+  '18_1':
+    requireLevel: 1
+    resultItem: 刺身
+    requireItem:
     - 红鲷鱼
   '19':
     requireLevel: 1
