--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -4961,6 +4961,7 @@ Drew之翼:
   - §r由最勇敢的战士使用
   - §r击中敌人时降低其防御
   - §r似乎可以在与某种海洋巨兽的战斗中立下汗马功劳……
+  - §r“如有鬼助”
   attributes:
     damage: 750
     damageType: Melee
