--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -1,5 +1,14 @@
-# 世界种子，严禁在世界已经生成过之后更改，会出现地形和生物群系紊乱！
-worldSeed: 1145141919810
+worldGen:
+    # 世界种子，严禁在世界已经生成过之后更改，会出现地形和生物群系紊乱！
+    seed: 1145141919810
+    # 区块生成时在控制台提示生成洞穴信息所需时长等详细信息，以便于微调下方的参数
+    caveGenDurationLog: true
+    # 洞穴生成时的估算大小；值越小则越准确，但世界生成也相应可能减缓
+    caveSketchSize: 3
+    # 洞穴生成估算时使用的线程数量；建议不要超过CPU线程数并视情况调整
+    caveSketchThreads: 2
+    # 洞穴生成估算时使用的线程数量；强烈建议打开chunkGenDurationLog后寻找较优解
+    caveDetailThreads: 8
 rarity:
   '-2': §#AAAAAA§l
   '-1': §#6B6B6B§l
