--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
@@ -107,11 +107,11 @@ pieces:
   - 铁套装
   铁护胫:
   - 铁套装
-  银头盔:
+  白银头盔:
   - 银套装
-  银链甲:
+  白银链甲:
   - 银套装
-  银护胫:
+  白银护胫:
   - 银套装
   金头盔:
   - 金套装
@@ -195,11 +195,11 @@ pieces:
   - 秘银战士套装
   秘银兜帽:
   - 秘银射手套装
-  秘银胸甲:
+  秘银链甲:
   - 秘银战士套装
   - 秘银魔法套装
   - 秘银射手套装
-  秘银护腿:
+  秘银护胫:
   - 秘银战士套装
   - 秘银魔法套装
   - 秘银射手套装
